--- a/DouBOLDash.csproj
+++ b/DouBOLDash.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IKPEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IKPEditor.Designer.cs">
+      <DependentUpon>IKPEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectNames.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,6 +78,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IKPEditor.resx">
+      <DependentUpon>IKPEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
